--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ p {
 .product-card img {
     width: 100%;
     height: 350px;
-    object-fit: cover;
+    object-fit: contain;
 }
 
 .product-card h3 {
